[gd_scene load_steps=4 format=3 uid="uid://cctmook84b7aa"]

[ext_resource type="Script" uid="uid://3hfsenio0d3h" path="res://Scripts/UI/CollectableCounter.gd" id="1_counter_script"]
[ext_resource type="Texture2D" uid="uid://pasc6tcjmcpd" path="res://Assets/kenney_simple-space/AAA-ChosenKenney/star_small.png" id="2_star_icon"]

[sub_resource type="LabelSettings" id="LabelSettings_counter"]
font_size = 20
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="CollectableCounter" type="Control"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_counter_script")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="IconTexture" type="TextureRect" parent="BackgroundPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_star_icon")
expand_mode = 1
stretch_mode = 5

[node name="CountLabel" type="Label" parent="BackgroundPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0/0"
label_settings = SubResource("LabelSettings_counter")
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
max_value = 1.0
step = 1.0
show_percentage = false
